--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -48,7 +48,7 @@
             <span class="app-tile-name">App 3</span>
         </a>
         <a href="javascript:void(0)" class="app-tile">
-            <img src="../../../assets/img/add_app.svg" alt="add app icon">
+            <img src="../../../assets/img/add_app.svg" style="width: 80px; height: 80px;;" alt="add app icon">
         </a>
     </aside>
 
