--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,3 @@
-<div style="padding:30px;">
-  <h1>Welcome Home Module</h1>
-  <input type="text" pInputText/>
+<div class="page-header">
+  <h2>Welcome Home Module</h2>
 </div>
