--- a/src/app/features/ui/colors/colors.component.html
+++ b/src/app/features/ui/colors/colors.component.html
@@ -1,4 +1,3 @@
-<div style="padding:30px;">
-  <h1>Welcome Colors Module</h1>
-
+<div class="page-header">
+  <h2>Welcome Colors Module</h2>
 </div>
