--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,61 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    padding-top: 70px;
+    padding-top: 60px;
 }
 
 /*
  * Main content
  */
-
 .main {
-    padding: 20px;
+    margin: 0;
 }
-@media (min-width: 768px) {
+
+.main .page-header {
+    margin-top: 30px;
+}
+
+.router-container {
+    padding-left: 0;
+}
+.router-container.sidebar-locked{
+    margin-left: 0;
+}
+
+@media( min-width:768px ) {
+    .router-container.sidebar-locked{
+        margin-left: 175px;
+    }
+
     .main {
-        padding-right: 40px;
-        padding-left: 40px;
+        margin-left: 50px;
+        margin-right: 0;
     }
 }
-.main .page-header {
-    margin-top: 0;
-}
 
+
+
+h1.panel-title {
+    font-size: 36px;
+}
+h2.panel-title {
+    font-size: 30px;
+}
+h3.panel-title {
+    font-size: 24px;
+}
+h4.panel-title {
+    font-size: 18px
+}
+h5.panel-title {
+    font-size: 14px
+}
+h6.panel-title {
+    font-size: 10px;
+}
+.col-md-4 {
+    display: flex;
+    flex-direction: column;
+}
 
 
 
