--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -27,7 +27,7 @@
 
     <div class="navbar-mobile-container  hidden-sm hidden-md hidden-lg">
       <span class="nav-left pull-left">
-        <i class="icon-menu icons"></i>
+        <a href="javascript:void(0);" (click)="toggleMobleSidebar()" ><i class="icon-menu icons"></i></a>
       </span>
       <span class="navbar-brand-center">
          <a class="navbar-brand" href="javascript:void(0);"><img src="assets/img/jbh-logo.png" style="height:35px; width:auto;" alt="JB Hunt Logo"></a>
